# plugin-mcp-yeti

./: .gitignore  Cargo.toml  README.md
resources/: plugin.rs  source.rs
