[package]
name = "plugin-mcp-yeti"
edition = "2024"
description = "Reference MCP plugin: extends yeti-mcp's tool registry across the cdylib boundary via the YTC-367 hook bridge"
version = "0.1.0"

[package.metadata.app]
customer_id = "yeti"
plugin = true
# Required so the app loader picks up and compiles `resources/plugin.rs`
# into a dylib. The compiler scans the copied module sources for
# `impl Plugin for ...` and auto-emits `__yeti_export_plugin!(YetiMcpPlugin)`.
resources = { path = "resources/*.rs" }

[dependencies]
# `yeti-sdk` is path-injected by the scaffolder at compile time. The
# `workspace = true` form is filtered out by the compiler and replaced
# with `{ path = "..." }`. yeti-sdk re-exports `yeti_types::extension`
# via `yeti_sdk::prelude::extension`, so this dylib reaches the
# canonical `ListToolsRequest` / `CallToolRequest` types and the hook
# chain name constants without a direct `yeti-types` dep.
yeti-sdk = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# `log` crate routes through yeti_sdk's host-bridged log::Log impl —
# `log::info!` / `log::warn!` show up in the host's tracing subscriber
# (bare `tracing::info!` from a dylib does NOT, see AGENTS.md). Used
# for the verification log line "Registered list_tools + call_tool
# hooks ..." that end-to-end checks grep for.
log = "0.4"
