[package]
name = "plugin-mcp-yeti"
edition = "2024"
description = "Reference MCP tool-source plugin: implements McpToolSource → host exports yeti:mcp/mcp-tool-source"
version = "0.1.0"

[package.metadata.app]
customer_id = "yeti"
plugin = true
# Required so the app loader picks up and compiles `resources/source.rs`
# into a wasm component. The compiler scans the copied module sources for
# `impl McpToolSource for ...`; the presence of that impl switches the
# generated wit_bindgen world from `customer-app` to `tool-source-export`
# and auto-emits the `Guest` impl for `yeti:mcp/mcp-tool-source` that
# delegates verb-for-verb into the customer struct.
resources = { path = "resources/*.rs" }

[dependencies]
# `yeti-sdk` is path-injected by the scaffolder at compile time. The
# `workspace = true` form is filtered out by the compiler and replaced
# with `{ path = "..." }`. yeti-sdk re-exports the `McpToolSource` trait
# + companion record types under `yeti_sdk::mcp`.
yeti-sdk = { workspace = true }
